# gpu-arch-microbenchmark

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_sass.py
global-memory/: ld-level.cu
memory/: cache_linesize.cu  global_memory_bandwidth.cu  ld_global_cache.sass  memory_bandwidth.cu  memory_latency.cu  op_ld_constant_cache.cu  op_ld_global_cache.cu  op_ld_global_vec.cu  op_ld_shared.cu
memory/global/: Makefile  ld_global_cache.cu  ld_global_cache.sass  main.cu
memory/sass_cubin/: memory_latency.cubin  memory_latency.sass
miscellany/: reg_align.cu  reg_bankconflict.cu  shared_bankconflict.cu
sass_cubin/: cache_linesize.sass  cache_linesize_75.cubin  memory_bandwidth_block.sass  memory_bandwidth_single.sass  memory_bandwidth_thread.sass  memory_latency.sass  memory_latency_75.cubin  reg_reuse_bankconflict.sass  reg_reuse_double.sass  reg_with_bankconflict.sass  reg_with_bankconflict_75.cubin  reg_without_bankconflict.sass  reg_without_bankconflict_75.cubin  shared_bankconflict.sass  warp_schedule.sass
schedule/: block_schedule.cu  warp_schedule.cu
scripts/: nvbit_analysis.cu
utils/: format_print.cuh  format_print.h  macro.cuh  macro.h  ptx_export.cuh  sass_kernel.cuh  utils.cuh
